[package]
name = "osc"
version = "0.1.0"
edition = "2021"

[dependencies]
midir = { version = "0.9", features = ["default"] }   # MIDIインターフェース用
# オプションで追加した方が良い依存関係例:
# serde: データのシリアライズ/デシリアライズ
serde = { version = "1.0", features = ["derive"] }

image = "0.25.5"
opencv = { version = "0.88.8", default-features = false, features = [
    "clang-runtime",
    "highgui",
    "videoio",
    "calib3d",
    "imgcodecs"
] }